capture game title

--- a/notebooks/capture_game_data.ipynb
+++ b/notebooks/capture_game_data.ipynb
@@ -13,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nHalf-Life 2: Episode One '"
+       "'Half-Life 2: Episode One'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +30,9 @@
    "source": [
     "hltb = requests.get('https://howlongtobeat.com/game.php?id=4250').content\n",
     "hltb_soup = BeautifulSoup(hltb, \"lxml\")\n",
-    "hltb_soup.find('div', attrs = {'class': 'profile_header shadow_text'}).get_text()"
+    "capture_title = hltb_soup.find('div', attrs = {'class': 'profile_header shadow_text'})\n",
+    "game_title = capture_title.get_text().strip('\\n').strip(' $')\n",
+    "game_title"
    ]
   },
   {
@@ -41,13 +43,6 @@
    "source": [
     "## Need to generate numbers (up to 42833 (Super Mario Odyssey))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
