Notes for further work

--- a/notebooks/capture_game_data.ipynb
+++ b/notebooks/capture_game_data.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Need to generate numbers (up to 42833 (Super Mario Odyssey))"
+    "## Need to generate numbers to find all titles, including 4 and 5 digits"
    ]
   }
  ],
