Store data with multindex, inc title

--- a/notebooks/capture_game_data.ipynb
+++ b/notebooks/capture_game_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "'Half-Life 2: Episode One'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,14 +32,16 @@
    "source": [
     "hltb = requests.get('https://howlongtobeat.com/game.php?id=4250').content\n",
     "hltb_soup = BeautifulSoup(hltb, \"lxml\")\n",
-    "capture_title = hltb_soup.find('div', attrs = {'class': 'profile_header shadow_text'})\n",
-    "game_title = capture_title.get_text().strip('\\n').strip(' $')\n",
-    "game_title"
+    "\n",
+    "def get_game_title(soup):\n",
+    "    return soup.find('div', attrs = {'class': 'profile_header shadow_text'}).get_text().strip('\\n').strip(' $')\n",
+    "\n",
+    "get_game_title(hltb_soup)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,22 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4h 30m\n",
-      "4h\n",
-      "3h 07m\n",
-      "7h 45m\n",
-      "218\n",
-      "Main + Extras\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_average_time(times):\n",
     "    return text_from_tag(times.findAll('td')[2])\n",
@@ -91,20 +80,12 @@
     "    return text_from_tag(times.findAll('td')[1])\n",
     "\n",
     "def get_play_title(times):\n",
-    "    return text_from_tag(times.findAll('td')[0])\n",
-    "\n",
-    "\n",
-    "print(get_average_time(main_extra_times))\n",
-    "print(get_median_time(main_extra_times))\n",
-    "print(get_rushed_time(main_extra_times))\n",
-    "print(get_leisure_time(main_extra_times))\n",
-    "print(get_poll_count(main_extra_times))\n",
-    "print(get_play_title(main_extra_times))"
+    "    return text_from_tag(times.findAll('td')[0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -112,14 +93,14 @@
       "text/plain": [
        "<tr>\n",
        "<td>Main Story</td>\n",
-       "<td class=\"center time_100_text\">787 </td> <td>3h 55m </td>\n",
+       "<td class=\"center time_100_text\">791 </td> <td>3h 55m </td>\n",
        "<td>4h </td>\n",
        "<td>2h 40m </td>\n",
        "<td>6h 58m </td>\n",
        "</tr>"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -166,45 +147,51 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Playstyle</th>\n",
+       "      <th></th>\n",
        "      <th>Polled</th>\n",
        "      <th>Average</th>\n",
        "      <th>Median</th>\n",
        "      <th>Rushed</th>\n",
        "      <th>Leisure</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Title</th>\n",
+       "      <th>Playstyle</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Main Story</td>\n",
-       "      <td>787</td>\n",
+       "      <th rowspan=\"4\" valign=\"top\">Half-Life 2: Episode One</th>\n",
+       "      <th>Main Story</th>\n",
+       "      <td>791</td>\n",
        "      <td>3h 55m</td>\n",
        "      <td>4h</td>\n",
        "      <td>2h 40m</td>\n",
        "      <td>6h 58m</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Main + Extras</td>\n",
-       "      <td>218</td>\n",
+       "      <th>Main + Extras</th>\n",
+       "      <td>217</td>\n",
        "      <td>4h 30m</td>\n",
        "      <td>4h</td>\n",
        "      <td>3h 07m</td>\n",
        "      <td>7h 45m</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Completionists</td>\n",
-       "      <td>184</td>\n",
-       "      <td>5h 33m</td>\n",
+       "      <th>Completionists</th>\n",
+       "      <td>185</td>\n",
+       "      <td>5h 32m</td>\n",
        "      <td>5h</td>\n",
        "      <td>3h 23m</td>\n",
        "      <td>18h 38m</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>All PlayStyles</td>\n",
+       "      <th>All PlayStyles</th>\n",
        "      <td>1.2K</td>\n",
        "      <td>4h 16m</td>\n",
        "      <td>4h</td>\n",
@@ -216,23 +203,25 @@
        "</div>"
       ],
       "text/plain": [
-       "        Playstyle Polled Average Median  Rushed  Leisure\n",
-       "0      Main Story    787  3h 55m     4h  2h 40m   6h 58m\n",
-       "0   Main + Extras    218  4h 30m     4h  3h 07m   7h 45m\n",
-       "0  Completionists    184  5h 33m     5h  3h 23m  18h 38m\n",
-       "0  All PlayStyles   1.2K  4h 16m     4h  2h 46m  18h 04m"
+       "                                        Polled Average Median  Rushed  Leisure\n",
+       "Title                    Playstyle                                            \n",
+       "Half-Life 2: Episode One Main Story        791  3h 55m     4h  2h 40m   6h 58m\n",
+       "                         Main + Extras     217  4h 30m     4h  3h 07m   7h 45m\n",
+       "                         Completionists    185  5h 32m     5h  3h 23m  18h 38m\n",
+       "                         All PlayStyles   1.2K  4h 16m     4h  2h 46m  18h 04m"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def generate_row(tag):\n",
-    "    return pd.DataFrame(data = [[get_play_title(tag), get_poll_count(tag), get_average_time(tag),\n",
-    "                                 get_median_time(tag), get_rushed_time(tag), get_leisure_time(tag)]],\n",
-    "                       columns = ['Playstyle', 'Polled', 'Average', 'Median', 'Rushed', 'Leisure'])\n",
+    "def generate_row(tag, soup):\n",
+    "    return pd.DataFrame(data = [[get_game_title(soup), get_play_title(tag), get_poll_count(tag), \n",
+    "                                 get_average_time(tag), get_median_time(tag), get_rushed_time(tag), \n",
+    "                                 get_leisure_time(tag)]],\n",
+    "                       columns = ['Title', 'Playstyle', 'Polled', 'Average', 'Median', 'Rushed', 'Leisure'])\n",
     "\n",
     "def cook_soup(id_no):\n",
     "    hltb = requests.get(str('https://howlongtobeat.com/game.php?id=' + id_no)).content\n",
@@ -244,11 +233,11 @@
     "\n",
     "def create_game_entry(id_no):\n",
     "    soup = cook_soup(id_no)\n",
-    "    main = generate_row(get_main_story_times(soup))\n",
-    "    main_extra = generate_row(get_main_story_extras_times(soup))\n",
-    "    completionist = generate_row(get_completionist_times(soup))\n",
-    "    all_playstyles = generate_row(get_all_playstyles_times(soup))\n",
-    "    return main.append(main_extra).append(completionist).append(all_playstyles)\n",
+    "    main = generate_row(get_main_story_times(soup), soup)\n",
+    "    main_extra = generate_row(get_main_story_extras_times(soup), soup)\n",
+    "    completionist = generate_row(get_completionist_times(soup), soup)\n",
+    "    all_playstyles = generate_row(get_all_playstyles_times(soup), soup)\n",
+    "    return main.append(main_extra).append(completionist).append(all_playstyles).set_index(['Title', 'Playstyle'])\n",
     "\n",
     "\n",
     "half_life_episode_two = create_game_entry(\"4250\")\n",
@@ -257,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -290,64 +279,78 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Playstyle</th>\n",
+       "      <th></th>\n",
        "      <th>Polled</th>\n",
        "      <th>Average</th>\n",
        "      <th>Median</th>\n",
        "      <th>Rushed</th>\n",
        "      <th>Leisure</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Title</th>\n",
+       "      <th>Playstyle</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Main Story</td>\n",
-       "      <td>146</td>\n",
-       "      <td>43h 12m</td>\n",
-       "      <td>43h 45m</td>\n",
-       "      <td>30h 57m</td>\n",
-       "      <td>52h 14m</td>\n",
+       "      <th rowspan=\"4\" valign=\"top\">Red Dead Redemption 2</th>\n",
+       "      <th>Main Story</th>\n",
+       "      <td>161</td>\n",
+       "      <td>43h 34m</td>\n",
+       "      <td>43h 57m</td>\n",
+       "      <td>31h 06m</td>\n",
+       "      <td>52h 23m</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Main + Extras</td>\n",
-       "      <td>289</td>\n",
-       "      <td>72h 56m</td>\n",
+       "      <th>Main + Extras</th>\n",
+       "      <td>323</td>\n",
+       "      <td>74h 15m</td>\n",
        "      <td>70h</td>\n",
-       "      <td>50h 43m</td>\n",
-       "      <td>110h 44m</td>\n",
+       "      <td>51h 02m</td>\n",
+       "      <td>124h 03m</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Completionists</td>\n",
-       "      <td>34</td>\n",
-       "      <td>137h 51m</td>\n",
-       "      <td>135h 21m</td>\n",
-       "      <td>103h 53m</td>\n",
-       "      <td>168h 18m</td>\n",
+       "      <th>Completionists</th>\n",
+       "      <td>36</td>\n",
+       "      <td>139h 59m</td>\n",
+       "      <td>141h 49m</td>\n",
+       "      <td>106h 02m</td>\n",
+       "      <td>170h 57m</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>All PlayStyles</td>\n",
-       "      <td>469</td>\n",
-       "      <td>68h 23m</td>\n",
-       "      <td>62h</td>\n",
-       "      <td>41h 49m</td>\n",
-       "      <td>132h 35m</td>\n",
+       "      <th>All PlayStyles</th>\n",
+       "      <td>520</td>\n",
+       "      <td>69h 18m</td>\n",
+       "      <td>64h</td>\n",
+       "      <td>42h 33m</td>\n",
+       "      <td>133h 49m</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Playstyle Polled   Average    Median    Rushed   Leisure\n",
-       "0      Main Story    146   43h 12m   43h 45m   30h 57m   52h 14m\n",
-       "0   Main + Extras    289   72h 56m       70h   50h 43m  110h 44m\n",
-       "0  Completionists     34  137h 51m  135h 21m  103h 53m  168h 18m\n",
-       "0  All PlayStyles    469   68h 23m       62h   41h 49m  132h 35m"
+       "                                     Polled   Average    Median    Rushed  \\\n",
+       "Title                 Playstyle                                             \n",
+       "Red Dead Redemption 2 Main Story        161   43h 34m   43h 57m   31h 06m   \n",
+       "                      Main + Extras     323   74h 15m       70h   51h 02m   \n",
+       "                      Completionists     36  139h 59m  141h 49m  106h 02m   \n",
+       "                      All PlayStyles    520   69h 18m       64h   42h 33m   \n",
+       "\n",
+       "                                       Leisure  \n",
+       "Title                 Playstyle                 \n",
+       "Red Dead Redemption 2 Main Story       52h 23m  \n",
+       "                      Main + Extras   124h 03m  \n",
+       "                      Completionists  170h 57m  \n",
+       "                      All PlayStyles  133h 49m  "
       ]
      },
-     "execution_count": 151,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
