output number of games added

--- a/notebooks/capture_game_data.ipynb
+++ b/notebooks/capture_game_data.ipynb
@@ -338,100 +338,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "foo = np.arange(172, 18999)"
+    "foo = np.arange(21000, 21999)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "172\n",
-      "174\n",
-      "175\n",
-      "180\n",
-      "191\n",
-      "196\n",
-      "198\n",
-      "199\n",
-      "205\n",
-      "206\n",
-      "207\n",
-      "210\n",
-      "213\n",
-      "219\n",
-      "223\n",
-      "232\n",
-      "234\n",
-      "236\n",
-      "237\n",
-      "238\n",
-      "247\n",
-      "248\n",
-      "250\n",
-      "253\n",
-      "254\n",
-      "255\n",
-      "256\n",
-      "262\n",
-      "266\n",
-      "268\n",
-      "269\n",
-      "270\n",
-      "271\n",
-      "272\n",
-      "274\n",
-      "275\n",
-      "277\n",
-      "278\n",
-      "281\n",
-      "283\n",
-      "296\n",
-      "302\n",
-      "309\n",
-      "310\n",
-      "319\n",
-      "320\n",
-      "321\n",
-      "322\n",
-      "323\n",
-      "324\n",
-      "329\n",
-      "330\n",
-      "331\n",
-      "340\n",
-      "343\n",
-      "346\n",
-      "347\n",
-      "348\n",
-      "353\n"
+      "21013\n",
+      "21021\n",
+      "21029\n",
+      "21032\n",
+      "21035\n",
+      "21041\n",
+      "21050\n",
+      "21060\n",
+      "21089\n",
+      "21092\n",
+      "21094\n",
+      "21100\n",
+      "21101\n",
+      "21105\n",
+      "21113\n",
+      "21117\n",
+      "21118\n",
+      "21128\n",
+      "21137\n",
+      "21138\n",
+      "21142\n",
+      "21145\n",
+      "21156\n",
+      "21158\n",
+      "21159\n",
+      "21163\n",
+      "21170\n",
+      "21172\n",
+      "21203\n",
+      "21225\n",
+      "21229\n",
+      "21232\n",
+      "21234\n",
+      "21236\n",
+      "21245\n",
+      "21246\n",
+      "21248\n",
+      "21251\n",
+      "21252\n",
+      "21253\n",
+      "21254\n",
+      "21255\n",
+      "21256\n",
+      "21257\n",
+      "21258\n",
+      "21260\n",
+      "21261\n",
+      "21262\n",
+      "21263\n",
+      "21264\n",
+      "21266\n",
+      "21269\n",
+      "21276\n",
+      "21278\n",
+      "21279\n",
+      "21280\n",
+      "21283\n",
+      "21284\n",
+      "21285\n",
+      "21286\n",
+      "21287\n",
+      "21288\n",
+      "21300\n",
+      "21311\n",
+      "21312\n",
+      "21316\n",
+      "21323\n",
+      "21324\n",
+      "21327\n",
+      "21328\n",
+      "21331\n",
+      "21386\n",
+      "21387\n",
+      "21389\n",
+      "21390\n",
+      "21392\n",
+      "21393\n",
+      "21402\n",
+      "21409\n",
+      "21410\n",
+      "21415\n",
+      "21421\n",
+      "21423\n",
+      "21444\n",
+      "21449\n",
+      "21450\n",
+      "21452\n",
+      "21458\n",
+      "21462\n",
+      "21471\n",
+      "21473\n",
+      "21478\n",
+      "21496\n",
+      "21500\n",
+      "21507\n",
+      "21519\n",
+      "21533\n",
+      "21534\n",
+      "21537\n",
+      "21538\n",
+      "21561\n",
+      "21578\n",
+      "21580\n",
+      "21586\n",
+      "21603\n",
+      "21614\n",
+      "21618\n",
+      "21620\n",
+      "21636\n",
+      "21641\n",
+      "21642\n",
+      "21643\n",
+      "21644\n",
+      "21665\n",
+      "21666\n",
+      "21672\n",
+      "21673\n",
+      "21680\n",
+      "21681\n",
+      "21683\n",
+      "21684\n",
+      "21685\n",
+      "21686\n",
+      "21687\n",
+      "21692\n",
+      "21694\n",
+      "21697\n",
+      "21698\n",
+      "21699\n",
+      "21700\n",
+      "21702\n",
+      "21703\n",
+      "21704\n",
+      "21708\n",
+      "21712\n",
+      "21723\n",
+      "21724\n",
+      "21729\n",
+      "21789\n",
+      "21815\n",
+      "21817\n",
+      "21840\n",
+      "21845\n",
+      "21846\n",
+      "21859\n",
+      "21874\n",
+      "21881\n",
+      "21891\n",
+      "21914\n",
+      "21924\n",
+      "21925\n",
+      "21965\n",
+      "21976\n",
+      "21979\n",
+      "Added 154 games\n"
      ]
     }
    ],
    "source": [
+    "#start_size = len(pd.read_csv(\"hl2b.csv\"))\n",
     "bar = []\n",
-    "import time\n",
-    "start = time.time()\n",
-    "\n",
+    "n = 0\n",
     "for i in foo:\n",
     "    data = create_game_entry(str(i))\n",
     "    #bar.append(data)\n",
     "    if not data.empty:\n",
+    "        n = n + 1\n",
     "        data.to_csv(\"hl2b.csv\", mode='a', header=False)\n",
     "        print(i)\n",
     "\n",
     "#pd.concat(bar)\n",
     "\n",
-    "end = time.time()\n",
-    "print(end - start)"
+    "#end_size = len(pd.read_csv(\"hl2b.csv\"))\n",
+    "print(\"Added\", n, \"games\")"
    ]
   },
   {
